# SLM-Shield

./: .gitignore  Final Inference Pipeline.ipynb  LoRA Adapter Pipeline.ipynb  LoRA-Fine-Tuning.ipynb  pyproject.toml
app/: detection.py  main.py  models.py
notebooks/: EDA.ipynb  LoRA-Fine-Tuning.ipynb
