[project]
name = "slm-shield"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.46.1",
    "fastapi>=0.138.1",
    "huggingface-hub>=1.21.0",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
