[project]
name = "slm-shield"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bitsandbytes>=0.46.1",
    "datasets>=5.0.0",
    "fastapi>=0.138.1",
    "huggingface-hub>=0.26,<1.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "torch>=2.6.0",
    "transformers>=4.49,<4.55",
    "triton-windows>=3.2.0.post13,<3.3",
    "trl>=0.15.2,<0.18",
    "unsloth==2025.7.2",
    "unsloth-zoo==2025.7.2",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
